plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'org.thinkbigthings'
version '1.0-SNAPSHOT'

mainClassName = 'org.thinkbigthings.desktop.Launcher'

sourceCompatibility = JavaVersion.VERSION_16

repositories {
    mavenCentral()
}

dependencies {
}

javafx {
    version = "16"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter:2.4.0'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.28'
}

test {
    useJUnitPlatform()
}


// use preview features
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
    // options.compilerArgs += "-Xlint:preview"
    options.compilerArgs += "-Xlint:unchecked"
    options.compilerArgs += "-Xlint:deprecation"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}